enable C++-11 for HDF5 code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ if(NOT DISABLE_CERN_ROOT)
     string(REPLACE "." ";" _VERSION_LIST ${CERN_ROOT_VERSION})
     list(GET _VERSION_LIST 0 CERN_ROOT_VERSION_MAJOR)
     if (${CERN_ROOT_VERSION_MAJOR} GREATER 5)
-      message(STATUS "This ROOT version needs C++-11, so we will enable this.")
+      message(WARNING "This ROOT version needs C++-11, so we will enable this.")
       UseCXX(11)
     endif()
   endif()
@@ -122,6 +122,10 @@ endif()
 
 if(NOT DISABLE_HDF5)
   find_package(HDF5 COMPONENTS CXX)
+  if (HDF5_FOUND)
+    message(WARNING "STIR HDF5 code needs C++-11, so we will enable this.")
+    UseCXX(11)
+  endif()
 endif()
 
 # Enable version 3 projectors
