--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ elseif(CYGWIN)
 else()
   set(STIR_DOC_DIR "doc/stir")
 endif()
+set(STIR_DATA_DIR "share/stir")
 set(ConfigPackageLocation lib/cmake/)
 
 ####### External packages
@@ -150,11 +151,27 @@ WRITE_BASIC_PACKAGE_VERSION_FILE(${CMAKE_CURRENT_BINARY_DIR}/STIRConfigVersion.c
 # the installed files, not the source.
 set (STIR_INCLUDE_DIRS "include")
 
+# install the registry sources
+install(FILES ${STIR_REGISTRIES} DESTINATION ${STIR_DATA_DIR}/src)
+
+# set STIR_REGISTRIES to this location before export
+# first create a new variable.
+set(INSTALLED_STIR_REGISTRIES)
+foreach(r  ${STIR_REGISTRIES})
+  # get filename without directory
+  get_filename_component(r_filename ${r} NAME)
+  # append this with installed location
+  # (note: have to use CMAKE_INSTALL_PREFIX for CONFIGURE_PACKAGE_CONFIG_FILE to
+  # make the variable relocatable)
+  list(APPEND INSTALLED_STIR_REGISTRIES "${CMAKE_INSTALL_PREFIX}/${STIR_DATA_DIR}/${r_filename}")
+endforeach()
+set(STIR_REGISTRIES ${INSTALLED_STIR_REGISTRIES})
+
 CONFIGURE_PACKAGE_CONFIG_FILE(
   src/cmake/STIRConfig.cmake.in
   "${CMAKE_BINARY_DIR}/STIRConfig.cmake"
    INSTALL_DESTINATION "${ConfigPackageLocation}"
-   PATH_VARS STIR_INCLUDE_DIRS
+   PATH_VARS STIR_INCLUDE_DIRS STIR_REGISTRIES # relocatable variables
 )
 
 # create and install STIRTargets*.cmake for the installation-tree
