--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,11 @@ matrix:
    python: 3
    # need -Wno-deprecated-declarations to avoid log-file limit due to tons of warnings about auto_ptr
    env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF" CXXFLAGS="-Wno-deprecated-declarations" CC=clang-5.0 CXX=clang++-5.0
- - os: linux
-   python: 3
-   # OPENMP on Travis seemed to be version 1 (???), so don't build it
-   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF -DCMAKE_CXX_STANDARD=11" CXXFLAGS="-Wno-deprecated-declarations" CC=clang-6.0 CXX=clang++-6.0
+# no clang-6 on trusty, so disabled
+# - os: linux
+#   python: 3
+#   # OPENMP on Travis seemed to be version 1 (???), so don't build it
+#   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF -DCMAKE#_CXX_STANDARD=11" CXXFLAGS="-Wno-deprecated-declarations" CC=clang-6.0 CXX=clang++-6.0
 
    ####  osx
    # note: cannot use OpenMP on OSX yet, see https://github.com/UCL/STIR/issues/117
@@ -78,7 +79,7 @@ addons:
       - python3-pytest
       - libgomp1
       - clang-5.0
-      - clang-6.0
+      # - clang-6.0 # no clang-6 on trusty, so disabled
       - root-system-bin
       - libroot-tree-dev
       - libroot-tree-treeplayer-dev
