--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -151,7 +151,7 @@ if(STIR_OPENMP)
         set(OPENMP_INCLUDES "SET ME" CACHE PATH "Need to set OpenMP include dir on OSX")
       endif()
       set(OpenMP_C "${CMAKE_C_COMPILER}")
-      set(OpenMP_C_FLAGS "-Wl,-undefined,error")
+      set(OpenMP_C_FLAGS "-Wunused-command-line-argument")
       set(OpenMP_C_LIB_NAMES "libomp" "libgomp" "libiomp5")
       set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
       set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
@@ -159,7 +159,7 @@ if(STIR_OPENMP)
     endif()
     if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
       set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
-      set(OpenMP_CXX_FLAGS "-Wl,-undefined,error")
+      set(OpenMP_CXX_FLAGS "-Wunused-command-line-argument")
       set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5")
       set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
       set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
