--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -146,12 +146,16 @@ endif()
 if(STIR_OPENMP)
 
   if(APPLE)
+    if(NOT DEFINED OPENMP_INCLUDES OR NOT DEFINED OPENMP_LIBRARIES)
+      set(OPENMP_INCLUDES "OPENMP_INCLUDES-NOTFOUND" CACHE PATH "Need to set OpenMP include dir on OSX")
+      set(OPENMP_LIBRARIES "OPENMP_LIBRARIES-NOTFOUND" CACHE PATH "Need to set OpenMP lib dir on OSX")
+    endif()
+    if(NOT EXISTS ${OPENMP_INCLUDES} OR NOT EXISTS ${OPENMP_LIBRARIES})
+      message(FATAL_ERROR "Need to set OPENMP_INCLUDES and OPENMP_LIBRARIES on OSX.")
+    endif()
     if(CMAKE_C_COMPILER_ID MATCHES "Clang")
-      if(NOT DEFINED OPENMP_INCLUDES)
-        set(OPENMP_INCLUDES "SET ME" CACHE PATH "Need to set OpenMP include dir on OSX")
-      endif()
       set(OpenMP_C "${CMAKE_C_COMPILER}")
-      set(OpenMP_C_FLAGS "-Wunused-command-line-argument")
+      set(OpenMP_C_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
       set(OpenMP_C_LIB_NAMES "libomp" "libgomp" "libiomp5")
       set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
       set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
@@ -159,7 +163,7 @@ if(STIR_OPENMP)
     endif()
     if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
       set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
-      set(OpenMP_CXX_FLAGS "-Wunused-command-line-argument")
+      set(OpenMP_CXX_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
       set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5")
       set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
       set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
@@ -169,23 +173,21 @@ if(STIR_OPENMP)
 
   find_package(OpenMP REQUIRED)  
 
+  add_definitions(${OpenMP_CXX_FLAGS})
+  
   if (APPLE)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_SHARED_LINKER_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set (CMAKE_STATIC_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_STATIC_LINKER_FLAGS} ${OpenMP_CXX_FLAGS}")   
+    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+    set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_SHARED_LINKER_FLAGS}")
+    set (CMAKE_STATIC_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_STATIC_LINKER_FLAGS}")   
     include_directories("${OPENMP_INCLUDES}")
     link_directories("${OPENMP_LIBRARIES}")
-    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+  else()
+    # need to explicitly set his. Definitely for gcc, hopefully also for other systems.
+    # See https://gitlab.kitware.com/cmake/cmake/issues/15392
+    set (OpenMP_EXE_LINKER_FLAGS ${OpenMP_CXX_FLAGS})
   endif()
-
-  add_definitions(${OpenMP_CXX_FLAGS})
-  # need to explicitly set his. Definitely for gcc, hopefully also for other systems.
-  # See https://gitlab.kitware.com/cmake/cmake/issues/15392
-  set (OpenMP_EXE_LINKER_FLAGS ${OpenMP_CXX_FLAGS})
 endif()
 
 #### Flags for compatibility between different systems
