--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -146,7 +146,7 @@ endif()
 if(STIR_OPENMP)
   find_package(OpenMP REQUIRED)  
   add_definitions(${OpenMP_CXX_FLAGS})
-  if(${CMAKE_VERSION} VERSION_LESS "3.9.0") 
+  if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.9.0") 
     set (OpenMP_EXE_LINKER_FLAGS OpenMP::OpenMP_CXX)
   else()
     message(WARNING "Your CMake version is old. OpenMP linking flags  might be incorrect.")
