--- a/src/swig/CMakeLists.txt
+++ b/src/swig/CMakeLists.txt
@@ -79,8 +79,7 @@ if(BUILD_SWIG_PYTHON)
     SWIG_ADD_LIBRARY(stir LANGUAGE python TYPE MODULE SOURCES stir.i ${STIR_REGISTRIES})
   endif()
   SWIG_LINK_LIBRARIES(stir ${STIR_LIBRARIES} ${PYTHON_LIBRARIES})
-  SET_TARGET_PROPERTIES(${SWIG_MODULE_stir_REAL_NAME} PROPERTIES
-        LINK_FLAGS "${OpenMP_EXE_LINKER_FLAGS}")  
+  target_link_libraries(${SWIG_MODULE_stir_REAL_NAME} ${OpenMP_EXE_LINKER_FLAGS})
   if (SWIG_DOXY_TARGET)
     add_dependencies(${SWIG_MODULE_stir_REAL_NAME} ${SWIG_DOXY_TARGET})
   endif()
@@ -159,8 +158,10 @@ if (BUILD_SWIG_MATLAB)
   endif()
   SET_TARGET_PROPERTIES(${SWIG_MODULE_stirMATLAB_REAL_NAME} PROPERTIES
         SUFFIX "_wrap.${MATLAB_MEX_EXT}" PREFIX "${MATLAB_PREFIX}"
-        LINK_FLAGS "${Matlab_CXXLINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}"
-        FOLDER "Matlab")  
+        LINK_FLAGS "${Matlab_CXXLINKER_FLAGS}"
+        FOLDER "Matlab")
+  target_link_libraries(${SWIG_MODULE_stirMATLAB_REAL_NAME} ${OpenMP_EXE_LINKER_FLAGS})
+	
   if (SWIG_DOXY_TARGET)
     add_dependencies(${SWIG_MODULE_stirMATLAB_REAL_NAME} ${SWIG_DOXY_TARGET})
   endif()
