niftypet proj pair

--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -107,6 +107,7 @@ if (STIR_WITH_NIFTYPET_PROJECTOR)
 		niftypet_projector/ProjectorByBinNiftyPETHelper
 		niftypet_projector/ForwardProjectorByBinNiftyPET
 		niftypet_projector/BackProjectorByBinNiftyPET
+		niftypet_projector/ProjectorByBinPairUsingNiftyPET
 		)
 endif()
 
