add missing quotataion marks

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -150,7 +150,7 @@ if(STIR_OPENMP)
       set(OPENMP_INCLUDES "OPENMP_INCLUDES-NOTFOUND" CACHE PATH "Need to set OpenMP include dir on OSX")
       set(OPENMP_LIBRARIES "OPENMP_LIBRARIES-NOTFOUND" CACHE PATH "Need to set OpenMP lib dir on OSX")
     endif()
-    if(NOT EXISTS ${OPENMP_INCLUDES} OR NOT EXISTS ${OPENMP_LIBRARIES})
+    if(NOT EXISTS "${OPENMP_INCLUDES}" OR NOT EXISTS "${OPENMP_LIBRARIES}")
       message(FATAL_ERROR "Need to set OPENMP_INCLUDES and OPENMP_LIBRARIES on OSX.")
     endif()
     if(CMAKE_C_COMPILER_ID MATCHES "Clang")
