find_package(STIR) respect QUIET or REQUIRED (#426)

--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -47,11 +47,19 @@ set(STIR_REGISTRIES @PACKAGE_STIR_REGISTRIES@)
 # we use a trick by Matt McCormick (kitware)
 # to set ITK_DIR etc first before calling find_package
 # to make sure we pick the same version of the external library
+if (STIR_FIND_QUIETLY)
+  SET(STIR_FIND_TYPE "QUIET")
+else()
+  SET(STIR_FIND_TYPE "REQUIRED")
+endif()
 
 if (@ITK_FOUND@)
   message(STATUS "ITK support in STIR enabled.")
   set(ITK_DIR "@ITK_DIR@")
-  find_package(ITK REQUIRED)
+  find_package(ITK ${STIR_FIND_TYPE})
+  if(NOT ITK_FOUND)
+    SET(STIR_FOUND OFF)
+  endif()
   include(${ITK_USE_FILE})
   set(STIR_BUILT_WITH_ITK TRUE)
 endif()
@@ -67,7 +75,10 @@ endif()
 
 if (@CERN_ROOT_FOUND@)
   set(CERN_ROOT_CONFIG @CERN_ROOT_CONFIG@)
-  find_package(CERN_ROOT REQUIRED)
+  find_package(CERN_ROOT ${STIR_FIND_TYPE})
+  if(NOT CERN_ROOT_FOUND)
+    SET(STIR_FOUND OFF)
+  endif()
   message(STATUS "CERN ROOT support in STIR enabled.")
   # need to add this as registries rely on it
   # would be better to add it to STIR_INCLUDE_DIRS (TODO)
@@ -77,7 +88,10 @@ endif()
 
 if (@AVW_FOUND@)
   set(AVW_ROOT_DIR @AVW_ROOT_DIR@)
-  find_package(AVW REQUIRED)
+  find_package(AVW ${STIR_FIND_TYPE})
+  if(NOT AVW_FOUND)
+    SET(STIR_FOUND OFF)
+  endif()
   message(STATUS "AVW support in STIR enabled.")
   # need to add this as registries rely on it
   # would be better to add it to STIR_INCLUDE_DIRS (TODO)
@@ -86,7 +100,10 @@ if (@AVW_FOUND@)
 endif()
 
 if (@STIR_MPI@)
-  find_package(MPI REQUIRED)
+  find_package(MPI ${STIR_FIND_TYPE})
+  if(NOT MPI_FOUND)
+    SET(STIR_FOUND OFF)
+  endif()
   set(STIR_BUILT_WITH_MPI TRUE)
 endif()
 
@@ -116,7 +133,10 @@ if(@STIR_OPENMP@)
       set(OpenMP_libiomp5_LIBRARY ${OpenMP_CXX_LIB_NAMES})
     endif()
   endif()
-  find_package(OpenMP REQUIRED)  
+  find_package(OpenMP ${STIR_FIND_TYPE})
+  if(NOT OpenMP_FOUND)
+    SET(STIR_FOUND OFF)
+  endif()  
   if (APPLE)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
