Move ctac_to_mu_values to utilities
Move to the utilities directory. Move slope JSON file to utilities. Remove spurious change to unique_ptr.h and now unnecessary HAVE_NLOHMANN_JSON variable. ctac_to_mu_values is only compiled if nlohmann_json library is enabled and found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,8 +86,8 @@ option(DISABLE_AVW "disable use of AVW library" OFF)
 option(DISABLE_RDF "disable use of GE RDF library" OFF)
 option(DISABLE_STIR_LOCAL "disable use of LOCAL extensions to STIR" OFF)
 option(DISABLE_CERN_ROOT "disable use of Cern ROOT libraries" OFF)
+option(DISABLE_NLOHMANN_JSON "disable use of nlohmann JSON libraries" OFF)
 option(STIR_ENABLE_EXPERIMENTAL "disable use of STIR experimental code" OFF) # disable by default
-option(STIR_ENABLE_SPECT_EXPERIMENTAL "disable use of STIR experimental SPECT code" OFF) # disable by default
 
 if(NOT DISABLE_ITK)
    # See if we can find a compiled version of ITK (http://www.itk.org/)
@@ -123,15 +123,14 @@ if(NOT DISABLE_RDF)
   find_package(RDF)
 endif()
 
-if(STIR_ENABLE_SPECT_EXPERIMENTAL)
-  find_package(nlohmann_json 3.2.0 REQUIRED)
-
-  if (nlohmann_json_FOUND)
-    message(STATUS "nlohmann JSON library found.")
-    set(HAVE_NLOHMANN_JSON ON)
-  endif()
+if(NOT DISABLE_NLOHMANN_JSON)
+    find_package(nlohmann_json 3.2.0 REQUIRED)
+    if (nlohmann_json_FOUND)
+        message(STATUS "nlohmann JSON library found.")
+        message(STATUS "The nlohmann JSON library needs C++-11, so we will enable this.")
+        UseCXX(11)
+    endif()
 endif()
-
 
 # Enable version 3 projectors
 option(STIR_PROJECTORS_AS_V3 "Enable STIR version 3 legacy code" OFF)
