--- a/src/listmode_buildblock/CMakeLists.txt
+++ b/src/listmode_buildblock/CMakeLists.txt
@@ -9,6 +9,7 @@ set(${dir_LIB_SOURCES}
 	CListModeData 
 	LmToProjData 
         LmToProjDataBootstrap
+	LmToProjDataWithRandomRejection
         CListModeDataECAT8_32bit
         CListRecordECAT8_32bit
 	CListModeDataSAFIR
