add niftypet adjoint test. fails.

--- a/src/test/niftypet_projector/CMakeLists.txt
+++ b/src/test/niftypet_projector/CMakeLists.txt
@@ -23,9 +23,12 @@ set(dir_SIMPLE_TEST_EXE_SOURCES_NO_REGISTRIES ${dir}_SIMPLE_TEST_EXE_SOURCES_NO_
 
 set(${dir_INVOLVED_TEST_EXE_SOURCES}
 	test_ProjectorNiftyPET
+	test_ProjectorNiftyPET_adjoint
 )
 
 ADD_TEST(test_ProjectorNiftyPET
    ${CMAKE_CURRENT_BINARY_DIR}/test_ProjectorNiftyPET --span 11)
+ADD_TEST(test_ProjectorNiftyPET_adjoint
+   ${CMAKE_CURRENT_BINARY_DIR}/test_ProjectorNiftyPET_adjoint)
 
 include(stir_test_exe_targets)
