--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -114,5 +114,5 @@ endif()
 
 if(@STIR_WITH_NIFTYPET_PROJECTOR@)
   find_package(CUDA REQUIRED)
-  set(STIR_BUILT_WITH_CUDA TRUE)
+  set(STIR_WITH_NIFTYPET_PROJECTOR TRUE)
 endif()
