Pursuing enhancement #458: create an extra CMake variable, STIR_OPENMP_PROJECTIONS (set by default to STIR_OPENMP), change the code in distributable.cxx, ForwardProjectorByBin.cxx etc to use that variable.
create another variable STIR_OPENMP_MATRIX (set by default to false) that enables then any projector parallelisations.
Parallelise SPECTUB matrix calculation (not working yet)

--- a/src/cmake/STIRConfig.h.in
+++ b/src/cmake/STIRConfig.h.in
@@ -69,6 +69,10 @@ namespace stir {
 
 #cmakedefine STIR_OPENMP
 
+#cmakedefine STIR_OPENMP_PROJECTIONS
+
+#cmakedefine STIR_OPENMP_MATRIX
+
 #cmakedefine STIR_MPI
 
 #cmakedefine STIR_USE_BOOST_SHARED_PTR
