--- a/.travis.yml
+++ b/.travis.yml
@@ -154,7 +154,7 @@ script:
   - ./run_SPECT_tests.sh
   # Run examples to see if they work
   - cd $TRAVIS_BUILD_DIR/examples/PET_simulation
-  - ./run_simulation.sh
+  - ./run_simulation.sh 1> /dev/null
   - cd $TRAVIS_BUILD_DIR/src
   # Run Python tests, making sure we're using the correct Python interpreter
   - export PYTHON=$(cmake -LA -N $TRAVIS_BUILD_DIR/build |awk -F= '/PYTHON_EXECUTABLE/ {print $2}')
