--- a/src/listmode_utilities/CMakeLists.txt
+++ b/src/listmode_utilities/CMakeLists.txt
@@ -43,6 +43,7 @@ endif()
 
 if (STIR_WITH_NIFTYPET_PROJECTOR)
   list(APPEND ${dir_EXE_SOURCES} conv_niftypet_stir)
+  list(APPEND ${dir_EXE_SOURCES} lm_to_projdata_niftypet)
 endif()
 
 
