--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -85,3 +85,7 @@ if (nlohmann_json_FOUND)
 endif()
 
 include(stir_exe_targets)
+
+if (nlohmann_json_FOUND)
+  target_link_libraries(ctac_to_mu_values nlohmann_json::nlohmann_json)
+endif()
