--- a/src/listmode_utilities/CMakeLists.txt
+++ b/src/listmode_utilities/CMakeLists.txt
@@ -41,6 +41,10 @@ if (HAVE_ECAT)
   )
 endif()
 
+if (STIR_WITH_NIFTYPET_PROJECTOR)
+  list(APPEND ${dir_EXE_SOURCES} conv_niftypet_stir)
+  list(APPEND ${dir_EXE_SOURCES} lm_to_projdata_niftypet)
+endif()
 
 
 include(stir_exe_targets)
