--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -68,7 +68,8 @@ set(${dir_LIB_SOURCES}
 	ProjDataRebinning 
 	FourierRebinning
 	PLSPrior
-	QuadraticPrior 
+        QuadraticPrior
+        RelativeDifferencePrior
 	FilterRootPrior 
 	GeneralisedObjectiveFunction 
 	PoissonLogLikelihoodWithLinearModelForMean 
