more capitalisation and use targets for cuda and niftypet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ option(DISABLE_STIR_LOCAL "disable use of LOCAL extensions to STIR" OFF)
 option(DISABLE_CERN_ROOT "disable use of Cern ROOT libraries" OFF)
 option(DISABLE_NLOHMANN_JSON "disable use of nlohmann JSON libraries" OFF)
 option(STIR_ENABLE_EXPERIMENTAL "disable use of STIR experimental code" OFF) # disable by default
-option(DISABLE_NIFTYPET_PROJECTOR "disable use of NiftyPET projector" OFF)
+option(DISABLE_NiftyPET_PROJECTOR "disable use of NiftyPET projector" OFF)
 
 if(NOT DISABLE_ITK)
    # See if we can find a compiled version of ITK (http://www.itk.org/)
@@ -139,16 +139,16 @@ endif()
 option(STIR_PROJECTORS_AS_V3 "Enable STIR version 3 legacy code" OFF)
 
 # NiftyPET projector
-if(NOT DISABLE_NIFTYPET_PROJECTOR)
-  find_package(CUDA QUIET)
-  if (CUDA_FOUND)
-    find_package(NIFTYPET)
-    if (NIFTYPET_FOUND)
-      set(STIR_WITH_NIFTYPET_PROJECTOR ON)
+if(NOT DISABLE_NiftyPET_PROJECTOR)
+  find_package(CUDAToolkit QUIET)
+  if (CUDAToolkit_FOUND)
+    find_package(NiftyPET)
+    if (NiftyPET_FOUND)
+      set(STIR_WITH_NiftyPET_PROJECTOR ON)
     endif()
   endif()
 endif()
-if (STIR_WITH_NIFTYPET_PROJECTOR) 
+if (STIR_WITH_NiftyPET_PROJECTOR)
   message(STATUS "NiftyPET projector support enabled.")
 else()
   message(STATUS "NiftyPET projector support disabled.")
