--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -112,7 +112,7 @@ if(@STIR_OPENMP@)
   set(STIR_BUILT_WITH_OpenMP TRUE)
 endif()
 
-if(@STIR_WITH_NIFTYPET_PROJECTOR@)
-  find_package(CUDA REQUIRED)
-  set(STIR_WITH_NIFTYPET_PROJECTOR TRUE)
+if(@STIR_WITH_NiftyPET_PROJECTOR@)
+  find_package(CUDAToolkit REQUIRED)
+  set(STIR_WITH_NiftyPET_PROJECTOR TRUE)
 endif()
