NiftyPET GPU functionality - projectors and unlisting
NiftyPET GPU functionality - projectors and unlisting

--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -111,3 +111,9 @@ if(@STIR_OPENMP@)
   find_package(OpenMP ${STIR_FIND_TYPE})
   set(STIR_BUILT_WITH_OpenMP TRUE)
 endif()
+
+if(@STIR_WITH_NiftyPET_PROJECTOR@)
+  find_package(CUDAToolkit REQUIRED)
+  find_package(NiftyPET REQUIRED)
+  set(STIR_WITH_NiftyPET_PROJECTOR TRUE)
+endif()
