--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -102,6 +102,15 @@ set(${dir_LIB_SOURCES}
 )
 endif()
 
+if (STIR_WITH_NiftyPET_PROJECTOR)
+  list(APPEND ${dir_LIB_SOURCES}
+    NiftyPET_projector/NiftyPETHelper
+    NiftyPET_projector/ForwardProjectorByBinNiftyPET
+    NiftyPET_projector/BackProjectorByBinNiftyPET
+    NiftyPET_projector/ProjectorByBinPairUsingNiftyPET
+  )
+endif()
+
 include(stir_lib_target)
 
 
@@ -117,5 +126,9 @@ endif()
 # modelling_buildblock currently needed for ParametricDensity and Patlak (TODO get rid of this somehow?)
 target_link_libraries(recon_buildblock modelling_buildblock display numerics_buildblock listmode_buildblock data_buildblock buildblock spatial_transformation_buildblock )
 
-
-
+if (STIR_WITH_NiftyPET_PROJECTOR)
+	target_link_libraries(recon_buildblock NiftyPET::petprj)
+	target_link_libraries(recon_buildblock NiftyPET::mmr_auxe)
+	target_link_libraries(recon_buildblock NiftyPET::mmr_lmproc)
+	target_link_libraries(recon_buildblock CUDA::cudart)
+endif()
