Added basic gradient ascent to demo4_obj_fun
parameter file has a number of iterations and stepsize for the user. Initial image can be adjusted but is currently the output of demo3 (renamed for clarity). 

This "optimisation" is quite unstable and does not work as it is unconstrained which causes huge problems for "compute_sub_gradient"

--- a/examples/src/CMakeLists.txt
+++ b/examples/src/CMakeLists.txt
@@ -5,7 +5,7 @@ set(dir examples)
 set(dir_EXE_SOURCES ${dir}_EXE_SOURCES)
 
 set(${dir_EXE_SOURCES}
-	demo1 demo2 demo3 demo4
+	demo1 demo2 demo3 demo4_obj_fun
 )
 
 
