C++ consistency test for OSMAPOSL
add a test for iterative reconstruction as well

--- a/src/recon_test/CMakeLists.txt
+++ b/src/recon_test/CMakeLists.txt
@@ -26,6 +26,7 @@ set(${dir_SIMPLE_TEST_EXE_SOURCES}
 	test_DataSymmetriesForBins_PET_CartesianGrid
         test_FBP2D
         test_FBP3DRP
+        test_OSMAPOSL
 )
 
 
