--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -125,3 +125,13 @@ if(@STIR_WITH_NiftyPET_PROJECTOR@)
   find_package(NiftyPET REQUIRED)
   set(STIR_WITH_NiftyPET_PROJECTOR TRUE)
 endif()
+
+if(@STIR_ENABLE_EXPERIMENTAL@)
+    if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
+      add_definitions(-DSTIR_WITH_EXPERIMENTAL)
+    else()
+      add_compile_definitions(STIR_WITH_EXPERIMENTAL)
+    endif()
+else()
+  remove_definitions(-DSTIR_WITH_EXPERIMENTAL)
+endif()
