--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -126,7 +126,8 @@ if(@STIR_WITH_NiftyPET_PROJECTOR@)
   set(STIR_WITH_NiftyPET_PROJECTOR TRUE)
 endif()
 
-if(@STIR_ENABLE_EXPERIMENTAL@)
+SET(STIR_WITH_EXPERIMENTAL @STIR_ENABLE_EXPERIMENTAL@)
+if(STIR_WITH_EXPERIMENTAL)
     if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
       add_definitions(-DSTIR_WITH_EXPERIMENTAL)
     else()
