experimental to registries and libraries

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -336,3 +336,5 @@ endif()
 ADD_SUBDIRECTORY(swig)
 
 
+SET(STIR_REGISTRIES ${STIR_REGISTRIES} PARENT_SCOPE)
+SET(STIR_LIBRARIES ${STIR_LIBRARIES} PARENT_SCOPE)
