--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,7 @@ shallow_clone: true
 version: '{build}'
 
 os:
+  - Visual Studio 2019
   - Visual Studio 2015
   - Visual Studio 2013
 
@@ -12,6 +13,13 @@ platform:
 
 configuration:
   - Release
+
+matrix:
+  exclude:
+    - os: Visual Studio 2015
+      platform: x86
+    - os: Visual Studio 2013
+      platform: x86
 
 build:
   verbosity: detailed
