--- a/.travis.yml
+++ b/.travis.yml
@@ -38,13 +38,12 @@ matrix:
  - os: osx
    python: 3
    env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF" CC=gcc CXX=g++
-   # Disable as ROOT is currently failing via brew
- # - os: osx
- #   osx_image: xcode9 # need that for ROOT
- #   python: 3
- #   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=OFF" CC=gcc CXX=g++
+   # Disable as ROOT is currently failing via brew (as it wants to build it, and which causes a timeout)
+ #- os: osx
+ #  python: 3
+ #  env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=OFF" CC=gcc CXX=g++
  - os: osx
-   osx_image: xcode9  # need that for ROOT
+   osx_image: xcode11.3
    python: 3
    env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF -DSTIR_ENABLE_EXPERIMENTAL:BOOL=ON" CC=clang CXX=clang++
 
